# dirisi25-hackathon-backend

./: .env.example  .env.jupyter  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_CREATED.md  QUICKSTART.md  RAG_README.md  README.md  STATUS.md  calculate-network-stats.py  debug-firewall-count.py  pyproject.toml  requirements-rag.txt  test-infer.py  test_api.sh  test_gemini.py
data/: README.md
docker/: Dockerfile
models/: README.md
src/: __init__.py
src/app/: __init__.py  config.py  logging_conf.py  main.py  security.py
src/app/routers/: explain.py  health.py  infer.py  ingest.py  logs.py  metrics.py  plan.py  predict.py  rag.py  topology.py
src/app/schemas/: ingest.py  planning.py  prediction.py  timeseries.py  topology.py
src/app/services/: anomaly_detector.py  data_synth.py  explainability.py  feature_store.py  gemini_llm.py  modeling.py  ovh_llm.py  planning.py  rag_service.py
src/app/utils/: seed.py  timers.py
src/scripts/: __init__.py  train_models.py
tests/: __init__.py  test_health.py  test_ingest.py  test_plan.py  test_predict.py
